# Population_ABM_Epidemiology_Respiratory_Virus

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE_CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py  test_simulation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml  deploy.yml  release.yml
cloud/aws/: batch_job_definition.json  cloudformation.yaml
cloud/gcp/: cloudbuild.yaml  kubernetes_deployment.yaml
data/parameters/: default_params.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
docs/notebooks/: basic_usage.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  models.rst
examples/: basic_simulation.py  vaccine_comparison.py
scripts/: deploy_to_cloud.py  run_benchmarks.py  setup_environment.sh
src/covid_abm/: __init__.py  cli.py
src/covid_abm/analysis/: ensemble.py  scenarios.py
src/covid_abm/models/: main_model.py  parameters.py  person.py  population.py
src/covid_abm/utils/: cloud_deployment.py  visualization.py
tests/: test_model.py  test_parameters.py
